# deepseek_Live2D

./: CMakeLists.txt  LICENSE  Live2DCubismCore.def  README.md  _b.bat  _build_temp.bat  build.bat  config.json  show_window.ps1  src.7z  test_config_parse.py  test_sovits_output.py  test_sovits_request.py
python/: chat_gui.py  deepseek_api.py  download_pretrained_direct.py  download_sovits_pretrained.py  index_tts2_bridge.py  install_index_tts2.py  model_loader_gui.py  ocr_helper.py  requirements.txt  sovits_server.py  tts_helper.py  tts_server.py
src/: AudioManager.cpp  AudioManager.h  ChatDialog.cpp  ChatDialog.h  CompanionWindow.cpp  CompanionWindow.h  Config.cpp  Config.h  ConfigJson.cpp  DeepSeekClient.cpp  DeepSeekClient.h  ExpressionManager.cpp  ExpressionManager.h  LAppDelegate.cpp  LAppDelegate.h  LAppModel.cpp  LAppModel.h  LAppPal.cpp  LAppPal.h  LAppView.cpp  LAppView.h  Live2DAllocator.h  Live2DManager.cpp  Live2DManager.h  MotionManager.cpp  MotionManager.h  OCRManager.cpp  OCRManager.h  PythonBridge.cpp  PythonBridge.h  ScreenCapture.cpp  ScreenCapture.h  TTSManager.cpp  TTSManager.h  main.cpp  utils.h  创建文件夹用C++. cpp
参考音频/: 【低落】我真正得到的只有孤独。所以我一度厌恶任何跟表演有关的事.txt  【假装不知道】仆人？谁啊，我已经忘掉了哦.txt  【急了】等等，你那是什么表情，该不会是想说，你从一开始就没有敬仰过我吧.txt  【悲伤】我还是没能做到，别看我.txt  【慵懒】呜，正好我也困了，明天见，记得准时叫我起来.txt  【担心】好大的雨，等等，水应该不会淹上来吧.txt  【无聊】嗯，好无聊啊，没有什么更有趣的事吗？.txt  【正常】茶会是淑女的必修课，如果你想学习茶会礼仪的话，我可以教你哦.txt  【骄傲】哎，人气太高也是一种苦恼，谁让我这么受欢迎呢？.txt
芙宁娜/: 下载链接.txt
